[package]
name = "antegen"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
publish = false

[lib]
name = "antegen"
path = "src/lib.rs"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
 
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace]
resolver = "2"
members = [
    "cli",
    "cron",
    "plugin",
    "programs/network",
    "programs/thread",
    "sdk",
    "utils"
]

[workspace.package]
version = "2.3.0"
authors = ["Antegen Maintainers <maintainers@antegen.xyz>"]
repository = "https://github.com/wuwei-labs/antegen"
homepage = "https://antegen.xyz/"
documentation = "https://docs.antegen.xyz/"
license = "MIT"
edition = "2021"
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
solana-cron = { path = "cron" }
antegen-utils = { path = "utils" }
antegen-plugin-utils = { path = "plugin/utils" }
antegen-thread-program = { path = "programs/thread", features = ["no-entrypoint"] }
antegen-network-program = { path = "programs/network", features = ["no-entrypoint"] }
antegen-test-program = { path = "programs/test", features = ["no-entrypoint"] }

anchor-lang = { version = "0.31.1" }
anchor-spl = { version = "0.31.1", features = ["mint", "token"] }

agave-geyser-plugin-interface = { version = "^2.2" }
anyhow = { version = "1.0.94" }
async-trait = { version = "0.1.83" }
base64 = { version = "0.22.1" }
bincode = { version = "1.3.3" }
bs58 = { version = "0.5.1" }
bzip2 = { version = "0.5.0" }
chrono = { version = "0.4.39", default-features = false, features = ["alloc"] }
clap = { version = "4.5.23", features = ["derive"] }
dirs-next = { version = "2.0.0" }
futures = { version = "0.3.31" }
indicatif = { version = "0.17" }
log = { version = "0.4" }
nom = { version = "7.1.3" }
pyth-sdk-solana = { version = "0.10" }
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.216" }
serde_json = { version = "1.0.133" }
solana-account-decoder = { version = "^2.2" }
solana-cli-config = { version = "^2.2" }
solana-client = { version = "^2.2" }
solana-logger = { version = "^2.2" }
solana-program = { version = "^2.2" }
solana-quic-client = { version = "^2.2" }
solana-sdk = { version = "^2.2" }
spl-memo = { version = "6.0.0" }
static-pubkey = { version = "1.0.3" }
tar = { version = "0.4" }
termcolor = { version = "1.4.1" }
terminal-link = { version = "0.1.0" }
thiserror = { version = "2.0.7" }
toml_datetime = { version = "0.6.8" }
tokio = { version = "1.29.1" }
version = { version = "3.0.0" }
winnow = { version = "0.4.1" }
