[package]
name = "antegen-plugin"
description = "Antegen plugin for Solana validators"
build = "build.rs"
publish = false

version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
name = "antegen_plugin"

[dependencies]
solana-cron = { workspace = true }
antegen-utils = { workspace = true }
antegen-plugin-utils= { workspace = true }
antegen-thread-program = { workspace = true }
antegen-network-program = { workspace = true }

anchor-lang = { workspace = true }

agave-geyser-plugin-interface = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
pyth-sdk-solana = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-logger = { workspace = true }
solana-program = { workspace = true }
solana-quic-client = { workspace = true }
solana-sdk = { workspace = true }
static-pubkey = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
rustc_version = "0.4.1"
cargo_toml = "0.15.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
